# Pommerman

./: FeatureEngineer.py  README.md  constants.py  docker_agent.py  feature_engineer.py  gdrive_auth.py  large_network.py  playground.py  pretraining_database.py  pretraining_game_env.py  pretraining_main.py  requirements.txt  rl_main.py  test.py  test_agent.py  test_file.py  testing_agent.py  testing_game_env.py  video_maker.py
GAIL/: generator.py
RL/: action_filter.py  chat_network.py  game_env.py  main.py  message_network.py  training.py
agents/: LN_agent.py  docker_agent.py  eisenach_agent.py  hako_agent.py  network_agent.py
agents/LN/: LNController.py
agents/eisenach/pommerman_cpp/: CMakeLists.txt
agents/eisenach/pommerman_cpp/src/agents/: agents.hpp  berlin_agent.cpp  cologne_agent.cpp  dortmund_agent.cpp  eisenach_agent.cpp  simple_agent.cpp
agents/eisenach/pommerman_cpp/src/bboard/: bboard.cpp  bboard.hpp  environment.cpp  step.cpp  step_utility.cpp  step_utility.hpp  strategy.cpp  strategy.hpp
notebooks/: PretrainingLNMain.ipynb  PretrainingMain.ipynb  TestPommerman.ipynb  WatchGamesPommerman.ipynb
pretraining/: DB.py  game_env.py  hako_agent.py  large_network.py  network.py  pretraining_database.py  pretraining_game_env.py  pretraining_main.py  testing_game_env.py
pretraining_LN/: hako_agent.py  large_network.py  pretraining_database.py  pretraining_game_env.py  pretraining_main.py
testing/: testing_game_env.py
